validierung ekf weiter, jour fixe, latex angefangen bisschen

--- a/Latex Vorlage 20160920/cover.tex
+++ b/Latex Vorlage 20160920/cover.tex
@@ -8,9 +8,7 @@
 \end{flushright} %rechtsbündig (Anfang)
 
 % der Titel der Arbeit:
-\vspace{38mm} {\centering {{\LARGE{Test Kartierung und Selbstlokalisierung für eine
-									 omnidirektionale mobile Roboterplattform
-									 in unbekanntem Terrain}}}
+\vspace{38mm} {\centering {{\LARGE{Nichtlineare Zustandsbeobachtung mit bildbasierter Validierung am inversen Doppelpendel}}}
 
 \vfill
 % hier kommt ne hübsche Grafik hin:
@@ -21,20 +19,20 @@
 \end{spacing}
 \begin{spacing}{1}
 \begin{tabular}{l}
- \Large{Masterarbeit M-Monat/Jahr-Nummer}
+ \Large{Studienarbeit M-Monat/Jahr-Nummer}
 \end{tabular}
 
 \vspace{5mm}
 
 \begin{tabular}{l}
-\large{Vorname Nachname}\\
-\large{Matrikelnummer xxxxxxx}
+\large{Andreas Serov}\\
+\large{Matrikelnummer 2871560}
 \end{tabular}
 
 \vspace{5mm}
 
 \begin{tabular}{l}
-\large{Hannover, Monat Jahr}
+\large{Hannover, März 2017}
 \end{tabular}
 
 
@@ -42,8 +40,8 @@
 {\large
 \begin{tabular}{l l}
 Erstprüfer  & Prof. Dr.-Ing. T. Ortmaier\\
-Zweitprüfer & Prof. Dr.-Ing. x\\
-Betreuer    & Dipl.-Ing. Max Musterknabe\\
+%Zweitprüfer & Prof. Dr.-Ing. x\\
+Betreuer    & M. Sc. Steffen Bosselmann\\
 \end{tabular}
 }
 
@@ -62,7 +60,7 @@ Betreuer    & Dipl.-Ing. Max Musterknabe\\
 % --------------------------------------------------
 % Erklürung
 
-\noindent Ich versichere, dass ich diese Masterarbeit selbstständig
+\noindent Ich versichere, dass ich diese Studienarbeit selbstständig
 verfasst und keine anderen als die angegebenen Hilfsmittel verwendet
 habe.
 
