--- a/Latex Vorlage 20160920/praeambel.tex
+++ b/Latex Vorlage 20160920/praeambel.tex
@@ -177,7 +177,7 @@
     \fi
 \fi
 % von wo sollen die Grafiken kommen?
-\graphicspath{{./fotos/}{./skizzen/}{./zeichnungen/}}
+\graphicspath{{./fotos/}{./skizzen/}{./zeichnungen/}{./plots/}}
 
 %Einstellungen für pgfplots
 \pgfplotsset{compat=1.3,
