--- a/Latex Vorlage 20160920/praeambel.tex
+++ b/Latex Vorlage 20160920/praeambel.tex
@@ -40,7 +40,7 @@
                    headings = small,
                    headinclude=true,
                    footinclude=false,
-                   %fleqn, % formeln links bündig
+                   fleqn, % formeln links bündig
                    oneside]{scrbook}
 \fi
 % Standard-Koma-Dokument mit
