--- a/Latex Vorlage 20160920/modellierung.tex
+++ b/Latex Vorlage 20160920/modellierung.tex
@@ -1,50 +1,56 @@
-\chapter{Modellierung und Zustandsraumdarstellung des Doppelpendels}
+\chapter{Modellbildung des Doppelpendels}
+\label{ch:modellbildung}
 
 Die Grundlage für die Simulation des inversen Doppelpendels bilden die dynamischen Bewegungsgleichungen des Systems. In diesem Kapitel wird auf die Herleitung der Gleichungen eingegangen. In einem ersten Schritt werden die Bewegungsgleichungen mithilfe der Lagrange'schen Gleichungen 2. Art hergeleitet. Im Anschluss wird aus den Bewegungsgleichungen die Zustandsraumdarstellung abgeleitet. Diese ist für die hier angewendeten Regelungskonzepte des Doppelpendels notwendig.
 
-\section{Dynamische Gleichungen}
+%\section{Dynamische Bewegungsgleichungen}
+%\label{sec:dynGleichungen}
 
-Der generelle Aufbau des inversen Doppelpendels kann \bild{DPskizze} entnommen werden. Das mechatronische System besteht aus einem Wagen und zwei miteinander gekoppelte Stäben. Der Wagen wird auf einer Linearführung bewegt und mit einem Motor angesteuert. Beide Pendelstäbe sind rotatorisch miteinander gelagert, sodass sie Bewegungen nur in der x-y-Ebene durchführen können. Für die Anwendung des Lagrange-Formalismus
+\begin{figure}[!ht]
+	\begin{center}
+		\includegraphics{DPskizze}
+		\caption{Aufbau des inversen Doppelpendels EIGENE SKIZZE NOCH ZU ERSTELLEN}
+		\label{fig:DPskizze}
+	\end{center}
+\end{figure}
+
+Der generelle Aufbau des inversen Doppelpendels kann Bild~\ref{fig:DPskizze} entnommen werden. Das mechatronische System besteht aus einem Wagen und zwei miteinander gekoppelte Stäben. Der Wagen wird auf einer Linearführung bewegt und mit einem Motor angesteuert. Beide Pendelstäbe sind rotatorisch miteinander gelagert, sodass sie Bewegungen nur in der x-y-Ebene durchführen können. Für die Anwendung des Lagrange-Formalismus
 \begin{equation}
 	\label{eq:lagrange}
-	\frac{	d}{dt} \frac{\partial L}{\partial \dot{q}_\mathrm{i}} - \frac{\partial L }{\partial q_\mathrm{i}} = Q_\mathrm{i}^\mathrm{n.k.}
+	\frac{	d}{dt} \frac{\partial L}{\partial \dot{q}_{i}} - \frac{\partial L }{\partial q_{i}} = Q_{i}^\mathrm{n.k.}
 \end{equation}
 
-zur Bestimmung der Bewegungsgleichungen ist eine energetische Betrachtung des Systems nötig. Hierbei repräsentieren $ q_\mathrm{i} $ die generalisierten Koordinaten, $ \dot{q}_\mathrm{i} $ ihre zeitlichen Ableitungen und $ Q_\mathrm{i}^\mathrm{n.k.} $ eventuell auftretende nicht konservative Kräfte. Die Lagrange-Funktion 
+ist eine energetische Betrachtung des Systems nötig. In Gleichung~\ref{eq:lagrange} repräsentieren $ q_\mathrm{i} $ die generalisierten Koordinaten, $ \dot{q}_\mathrm{i} $ ihre zeitlichen Ableitungen und $ Q_\mathrm{i}^\mathrm{n.k.} $ auftretende nicht konservative Kräfte. Im vorliegenden Fall werden die generalisierten Koordinaten $ x(t) $, $ \varphi_1(t)$ und $ \varphi_2(t) $ verwendet. Diese Größen hängen von der Zeit ab, jedoch wird aus Gründen der Übersichtlichkeit die Zeitabhängigkeit in diesem Kapitel vorausgesetzt und nicht explizit aufgeführt. Die Lagrange-Funktion 
 \begin{equation}
-	\label{eq:lagrangeFunction}
+	\label{eq:lagrangeFunktion}
 	L = T- U
 \end{equation}
 
 setzt sich aus der kinetischen Energie $T$ des Systems und der potentiellen Energie $L$ zusammen. Die kinetische Energie 
 \begin{equation}
-	\label{eq:energyKin}
-	T = \frac{1}{2} \sum_\mathrm{i = 0}^\mathrm{n} m_\mathrm{i} v_\mathrm{i}^{2} 
-	+ \frac{1}{2} \sum_\mathrm{i = 1}^\mathrm{2} J_\mathrm{i}^\mathrm{S} \varphi_\mathrm{i}^2  
+	\label{eq:energieKin}
+	T = \frac{1}{2} \sum_{i = 0}^{n} m_{i} v_{i}^{2} 
+	+ \frac{1}{2} \sum_{i = 1}^{2} J_{i}^{S} \varphi_{i}^2  
 \end{equation}
 
 besteht aus der translatorischen Bewegungsenergie der $ n $ Schwerpunkte und der Rotationsenergie der Pendelstäbe. Die Trägheiten der Pendel werden über das Massenträgheitsmoment eines dünnen Stabes mit 
-
 \begin{align*}
-	J_\mathrm{i}^\mathrm{S} = \frac{1}{12} m_\mathrm{i} l_\mathrm{i}^2
+	J_{i}^{S} = \frac{1}{12} m_{i} l_{i}^2
 \end{align*}
 
-approximiert. Die potentielle Energie des Systems lässt sich im vorliegenden Fall auf das Höhenpotential
-
+um den Schwerpunkt approximiert. Die potentielle Energie des Systems lässt sich im vorliegenden Fall auf das Höhenpotential
 \begin{equation}
-	\label{eq:energyPot}
-	U = g\sum_\mathrm{i  = 0}^\mathrm{n}  m_\mathrm{i}  y_\mathrm{i}  
+	\label{eq:energiePot}
+	U = g\sum_{i  = 0}^{n}  m_{i}  y_{i}  
 \end{equation} 
 
-beschränken. Das Nullniveau des Potentials wird auf die Höhe $ y_0 $ des Wagens gelegt, sodass sich die potentielle Energie wie folgt ergibt:
-
+beschränken. Das Nullniveau des Potentials wird auf die Höhe $ y_0 $ des Wagens gelegt, sodass sich die potentielle Energie 
 \begin{equation}
-\label{eq:energyPotTotal}
-U = ... = g \big( (\tfrac{1}{2} m_1 + m_2 + m_3 ) l_1 \cos(\varphi_1) + \tfrac{1}{2} m_2 l_2 \cos(\varphi_2) \big) \text{.}
+\label{eq:energiePotTotal}
+U = ... = g \big( (\tfrac{1}{2} m_1 + m_2 + m_3 ) l_1 \cos(\varphi_1) + \tfrac{1}{2} m_2 l_2 \cos(\varphi_2) \big) 
 \end{equation}
 
-Bei der Modellierung des Doppelpendels ist die Betrachtung von vier Schwerpunkten, die \bild{DPskizze} zu entnehmen sind, notwendig. Neben den Schwerpunkten des Wagens und der beiden Pendel, die über die Indizes 0, 1 und 2 verfügen, ist noch das Verbindungsgelenk der Stäbe zu beachten. Das Gelenk wird als Punktmasse behandelt mit dem Index 3 versehen. Damit werden die Position der Massen zu
-
+ergibt. Bei der Modellierung des Doppelpendels ist die Betrachtung von vier Schwerpunkten, die Bild~\ref{fig:DPskizze} zu entnehmen sind, notwendig. Neben den Schwerpunkten des Wagens und der beiden Pendel, die über die Indizes 0, 1 und 2 verfügen, ist noch das Verbindungsgelenk der Stäbe zu beachten. Das Gewicht des Gelenks ist so hoch, dass es bei der Modellierung berücksichtigt wird und nicht vernachlässigt werden kann. Das Gelenk wird als Punktmasse behandelt und mit dem Index 3 versehen. Damit werden die Position der Massen 
 \begin{align*}
 	x_0 &= x, &
 	y_0 &= 0, \\
@@ -57,7 +63,6 @@ Bei der Modellierung des Doppelpendels ist die Betrachtung von vier Schwerpunkte
 \end{align*}
 
 bestimmt. Zur Ermittlung der Schwerpunktgeschwindigkeiten werden die zeitlichen Ableitungen
-
 \begin{align*}
 	\dot{x}_0 &= \dot{x}, &
 	\dot{y}_0 &= 0, \\
@@ -65,74 +70,73 @@ bestimmt. Zur Ermittlung der Schwerpunktgeschwindigkeiten werden die zeitlichen 
 	\dot{y}_1 &= -\tfrac{1}{2} l_1 \sin(\varphi_1) \dot{\varphi}_1, \\
 	\dot{x}_2 &= \dot{x}_0 - l_1 \cos(\varphi_1) \dot{\varphi}_1 -\tfrac{1}{2}l_2\cos(\varphi_2) \dot{\varphi}_2, & \dot{y}_2 &= -l_1 \sin(\varphi_1) \dot{\varphi}_1 - \tfrac{1}{2} l_2 \sin(\varphi_2) \dot{\varphi}_2, \\ 
 	\dot{x}_3 &= \dot{x}_0 - l_1\cos(\varphi_1) \dot{\varphi}_1, &
-	\dot{y}_3 &= -l_1 \sin(\varphi_1) \dot{\varphi}_1 \\
+	\dot{y}_3 &= -l_1 \sin(\varphi_1) \dot{\varphi}_1
 \end{align*}
 
 benötigt. Die Ermittlung der Gesamtgeschwindigkeit in der $ x $-$ y $-Ebene unter Berücksichtigung von $ \dot{x}_0 = \dot{x} $ ist über eine Betragsbildung möglich und liefert
-
 \begin{align*}
 	v_0^2 &= \dot{x}_0^2 + \dot{y}_0^2 = \dot{x}^2, \\
 	v_1^2 &= \dot{x}_1^2 + \dot{y}_1^2 = \dot{x}^2 -l_1\cos(\varphi_1) \dot{x}_1 \dot{\varphi}_1 
 	+ \tfrac{1}{4} l_1^2 \dot{\varphi}_1^2, \\
 	v_2^2 &= \dot{x}_2^2 + \dot{y}_2^2 \\
 	&= \dot{x}^2 + l_1 \dot{\varphi}_1^2 + \tfrac{1}{4} l_2^2 \dot{\varphi}_2^2
-	- 2 \dot{x}^2 l_1 \cos(\varphi_1) \dot{\varphi}_1 - l_2 \dot{x} \cos(\varphi_2) \dot{\varphi_2}
-	+ l_1 l_2 \cos(\varphi_1-\varphi_2) \dot{\varphi_1} \dot{\varphi_2}, \\
-	v_3^2 &= \dot{x}_3^2 + \dot{y}_3^2 = \dot{x}^2 - 2 l_1 \cos(\varphi_1) \dot{x} \dot{\varphi_1} + l_1^2 \dot{\varphi_1} \text{.} 
+	- 2 \dot{x}^2 l_1 \cos(\varphi_1) \dot{\varphi}_1 - l_2 \dot{x} \cos(\varphi_2) \dot{\varphi}_2
+	+ l_1 l_2 \cos(\varphi_1-\varphi_2) \dot{\varphi}_1 \dot{\varphi}_2, \\
+	v_3^2 &= \dot{x}_3^2 + \dot{y}_3^2 = \dot{x}^2 - 2 l_1 \cos(\varphi_1) \dot{x} \dot{\varphi}_1 + l_1^2 \dot{\varphi}_1 \text{.} 
 \end{align*}
 
-Somit ergibt sich die kinetische Energie des Systems mit der Gleichung~\ref{eq:energyKin} zu
-
+Somit ergibt sich die kinetische Energie des Systems gemäß Gleichung~\ref{eq:energieKin} zu
 \begin{align}
-	\label{eq:energyKinTotal}
+	\label{eq:energieKinTotal}
 	\begin{split}
-	T &= \frac{1}{2} (m_0 v_0^2 + m_1 v_1^2 + J_1^\mathrm{S} \varphi_1^2 + m_2 v_2^2 + J_2^\mathrm{S} \varphi_2^2 + m_3 v_3^2)  \\
-	&= ... = \frac{1}{2} \Big( (m_0 + m_1 + m_2 + m_3) \dot{x}^2 + (\tfrac{1}{4} m_1 + m_2 + m_3) l_1^2 \dot{\varphi_1}^2  \\
-	 &-(m_1 + 2m_2 + 2m_3 ) l_1 \dot{x} \cos(\varphi_1) \dot{\varphi_1} 
-	+ m_2 (\tfrac{1}{4} l_2^2 \dot{\varphi_2}^2 - l_2 \dot{x} \cos(\varphi_2) \dot{\varphi_2} )  \\
-	&+ l_1 l_2 \cos(\varphi_1-\varphi_2)\dot{\varphi_1}\dot{\varphi_2} + J_1^\mathrm{S} \dot{\varphi_1}^2
-	+ J_2^\mathrm{S} \dot{\varphi_2}^2	\Big) \text{.}
+	T &= \frac{1}{2} (m_0 v_0^2 + m_1 v_1^2 + m_2 v_2^2 + m_3 v_3^2+ J_1^\mathrm{S} \varphi_1^2 + J_2^\mathrm{S} \varphi_2^2)  \\
+	&= ... = \frac{1}{2} \Big( (m_0 + m_1 + m_2 + m_3) \dot{x}^2 + (\tfrac{1}{4} m_1 + m_2 + m_3) l_1^2 \dot{\varphi}_1^2  \\
+	 &-(m_1 + 2m_2 + 2m_3 ) l_1 \dot{x} \cos(\varphi_1) \dot{\varphi}_1 
+	+ m_2 (\tfrac{1}{4} l_2^2 \dot{\varphi}_2^2 - l_2 \dot{x} \cos(\varphi_2) \dot{\varphi}_2 )  \\
+	&+ l_1 l_2 \cos(\varphi_1-\varphi_2)\dot{\varphi}_1\dot{\varphi}_2 + J_1^\mathrm{S} \dot{\varphi}_1^2
+	+ J_2^\mathrm{S} \dot{\varphi}_2^2	\Big) \text{.}
 	\end{split}
 \end{align}
 
-Mithilfe der Gleichungen~\ref{eq:energyKinTotal} und~\ref{eq:energyPotTotal} werden die Lagrange-Gleichungen 2. Art aufgestellt. In dem vorliegenden Fall werden drei generalisierte Koordinaten $ x $, $ \varphi_1$ und $ \varphi_2 $ verwendet.
-
+Mithilfe der Gleichungen~\ref{eq:energieKinTotal} und~\ref{eq:energiePotTotal} werden die Lagrange-Gleichungen 2. Art 
+%
 \begin{align}
 	\frac{d}{dt} \frac{\partial L }{\partial \dot{x}} - \frac{\partial L }{\partial x} &= F_\mathrm{a} - F_\mathrm{r} 	\label{eq:lagrangeX}  \\
-	\frac{d}{dt} \frac{\partial L }{\partial \dot{\varphi_1}} - \frac{\partial L }{\partial \varphi_1} &= d_\mathrm{2} (\dot{\varphi_2} - \dot{\varphi_1}) - d_\mathrm{1} \dot{\varphi_1} \label{eq:lagrangePhi1} \\	
-	\frac{d}{dt} \frac{\partial L }{\partial \dot{\varphi_2}} - \frac{\partial L }{\partial \varphi_2} &= -d_\mathrm{2} (\dot{\varphi_2} - \dot{\varphi_1}) \text{.} \label{eq:lagrangePhi2}
+	\frac{d}{dt} \frac{\partial L }{\partial \dot{\varphi}_1} - \frac{\partial L }{\partial \varphi_1} &= d_\mathrm{2} (\dot{\varphi}_2 - \dot{\varphi}_1) - d_\mathrm{1} \dot{\varphi}_1 \label{eq:lagrangePhi1} \\	
+	\frac{d}{dt} \frac{\partial L }{\partial \dot{\varphi}_2} - \frac{\partial L }{\partial \varphi_2} &= -d_\mathrm{2} (\dot{\varphi}_2 - \dot{\varphi}_1 ) \text{.} \label{eq:lagrangePhi2}
 \end{align}
 
-In \cite{Behm2016} werden zwei Möglichkeiten Regelung und Steuerung des mechatronischen Systems aufgezeigt. Zum einen kann der Wagen momentengesteuert bewegt werden. Hierbei wird ein Wunschmoment $ M_\mathrm{soll} $ an den Motor übertragen. Bei der Umsetzung des Moments hat die Reibung der Linearführung jedoch einen großen Einfluss auf die letztendliche Bewegung des Wagens. Zum anderen ist es möglich, eine Sollgeschwindigkkeit $ v_\mathrm{soll} $ vorzugeben. Dies hat den Vorteil, dass die Reibung des Systems vernachlässigt werden kann. Außerdem wird in \cite{Behm2016} aufgezeigt, dass bei der Regelung des inversen Einfachpendels mit Drehzahlvorgabe bessere Regelungsgebnisse erzielt werden. Aus diesen Gründen wird im folgenden die Wagenbeschleunigung $ \ddot{x} $ als Eingangsgröße des Systems gewählt. Dadurch ist die Lösung von Gleichung~\ref{eq:lagrangeX} nicht mehr notwendig. Nach bilden der Ableitungen und Umformen von Gleichungen~\ref{eq:lagrangePhi1} und~\ref{eq:lagrangePhi2} lassen sich die Bewegungsgleichungen der beiden Pendelstäbe aufstellen:
-
+aufgestellt. Die nicht-konservativen Kräfte sind die Antriebskraft des Motors, die Reibung zwischen Linearführung und Wagen sowie die Dämpfungen der Pendellager. In \cite{Behm2016} werden zwei Möglichkeiten zur Regelung und Steuerung des mechatronischen Systems aufgezeigt. Zum einen kann der Wagen momentengesteuert bewegt werden. Hierbei wird ein Wunschmoment $ M_\mathrm{soll} $ an den Motor übertragen. Bei der Umsetzung des Moments hat die Reibung der Linearführung und jedoch einen großen Einfluss auf die letztendlich resultierende Geschwindigkeit des Wagens. Um eine realitätstreue Modellierung des Systems zu gewährleisten, wird eine Berücksichtigung der Reibung vorausgesetzt, wenn das Pendel momentengesteuert betrieben wird. Zum anderen ist es möglich, eine Sollgeschwindigkkeit $ v_\mathrm{soll} $ vorzugeben. Dies hat den Vorteil, dass die Reibung des Systems vernachlässigt werden kann. Außerdem wird in \cite{Behm2016} aufgezeigt, dass bei der Regelung des inversen Einfachpendels mit Drehzahlvorgabe bessere Regelungsgebnisse erzielt werden. Aus diesen Gründen wird im folgenden die Wagenbeschleunigung $ \ddot{x} $ als Eingangsgröße des Systems gewählt. Dies hat zur Folge, dass eine Rückwirkung der Pendelbewegung auf den Wagen ausgeschlossen wird. Aufgrund der hohen Haftreibung der Linearführung und des geringen Gewichts der realen Pendelstäbe (~\ref{sec:} SIEHE TABELLE MIT KONSTANTEN) ist diese Annahme legitim [NACHWEIS MÖGLICH: MESSDATEN AUSSCHWINGVERSUCH]. Für die Ansteuerung des Motors, wird die Sollgeschwindigkeit durch eine einfache Integration der vorgegebenen Beschleunigung ermittelt. Dadurch ist die explizite Lösung von Gleichung~\ref{eq:lagrangeX}, die die Bewegungsgleichung des Wagens liefert, nicht mehr notwendig. Nach Bildung der Ableitungen der Lagrange-Funktion und Umformen von Gleichungen~\ref{eq:lagrangePhi1} und~\ref{eq:lagrangePhi2} lassen sich die Bewegungsgleichungen des inversen Doppelpendels aufstellen:
+\begin{align}
+	\ddot{x} = u \label{eq:ddx}
+\end{align}
+\vspace{-0.7cm}
 \begin{align}
 	\begin{split}
-	\ddot{\varphi_1} = &\frac{1}{J_1^\mathrm{S} + (\tfrac{1}{4} m_1 + m_2 + m_3) l_1^2 } \Big( d_\mathrm{2} (\dot{\varphi_2} - \dot{\varphi_1}) - d_\mathrm{1} \dot{\varphi_1} + (\tfrac{1}{2} m_1 + m_2 + m_3) l_1 \cos(\varphi_1) \ddot{x} \\
+	\ddot{\varphi}_1 = &\frac{1}{J_1^\mathrm{S} + (\tfrac{1}{4} m_1 + m_2 + m_3) l_1^2 } \Big( d_\mathrm{2} (\dot{\varphi}_2 - \dot{\varphi}_1) - d_\mathrm{1} \dot{\varphi}_1  + (\tfrac{1}{2} m_1 + m_2 + m_3) l_1 \cos(\varphi_1) \ddot{x} \\
 	&+ (\tfrac{1}{2} m_1 + m_2 + m_3) l_1 g \sin(\varphi_1) 
-	- \tfrac{1}{2} m_2 l_1 l_2 ( cos(\varphi_1 - \varphi_2) \ddot{\varphi_2} + sin(\varphi_1 - \varphi_2) \dot{\varphi_2}^2  ) \Big) 	\label{eq:ddph1} 
+	- \tfrac{1}{2} m_2 l_1 l_2 ( \cos(\varphi_1 - \varphi_2) \ddot{\varphi_2} + \sin(\varphi_1 - \varphi_2) \dot{\varphi}_2^2  )   \Big)  	\label{eq:ddphi1}  
 	\end{split}
 \end{align}
 \vspace{-0.4cm}
 \begin{align}
 	\begin{split}
-	\ddot{\varphi_2} = \frac{1}{J_2^\mathrm{S} + \tfrac{1}{4} m_2 l_2^2 } \Big( 
-	&- d_\mathrm{2} (\dot{\varphi_2} - \dot{\varphi_1})
+	\ddot{\varphi}_2 = \frac{1}{J_2^\mathrm{S} + \tfrac{1}{4} m_2 l_2^2 } \Big( 
+	&- d_\mathrm{2} (\dot{\varphi}_2 - \dot{\varphi}_1)
 	+ \tfrac{1}{2} m_2 l_2 \cos(\varphi_2) \ddot{x}
 	+ \tfrac{1}{2} m_2 l_2 g \sin(\varphi_2) \\
-	&+ \tfrac{1}{2} m_2 l_1 l_2 (sin(\varphi_1 - \varphi_2) \dot{\varphi_1}^2 - cos(\varphi_1-\varphi_2) \ddot{\varphi_1}  )
-	\Big) 	%\label{eq:ddphi2}
+	&+ \tfrac{1}{2} m_2 l_1 l_2 (sin(\varphi_1 - \varphi_2) \dot{\varphi}_1^2 - cos(\varphi_1-\varphi_2) \ddot{\varphi}_1  )
+	\Big) \label{eq:ddphi2}
 	\end{split}
 \end{align} 
 
-\begin{figure}[!ht]
-	\begin{center}
-		\includegraphics{DPskizze}
-		\caption{Aufbau des inversen Doppelpendels EIGENE SKIZZE NOCH ZU ERSTELLEN}
-		\label{fig.DPskizze}
-	\end{center}
-\end{figure}
 
-%\begin{equation}
-%sljdsjuhd = luhsdfiuhsf+ spidhfos
-%\end{equation}
+In den Gleichungen~\ref{eq:ddphi1} und~\ref{eq:ddphi2} ist zu sehen, dass Winkelbeschleunigungen jeweils noch voneinander abhängen. In der Bewegungsgleichung für den inneren Pendelstab $ \ddot{\varphi}_1 $ taucht die Winkelbeschleunigung $ \ddot{\varphi}_2 $ auf und umgekehrt. Führt man Simulationen mit den Gleichungen~\ref{eq:ddphi1} und~\ref{eq:ddphi2} aus, tritt eine algebraische Schleife auf. Das Ergebnis der einen Gleichung wird im selben Zeitschritt für die Auswertung der anderen Winkelbeschleunigung benötigt. Um dieses Problem zu umgehen, werden die Gleichungen entkoppelt. Die Gleichungen der Form
+%
+\begin{align}
+	\ddot{\varphi}_1 &= f(\ddot{x}, \varphi_1, \dot{\varphi}_1, \varphi_2, \dot{\varphi}_2    ),	\label{eq:ddphi1Entkoppelt} \\
+	\ddot{\varphi}_2 &= f(\ddot{x}, \varphi_1, \dot{\varphi}_1, \varphi_2, \dot{\varphi}_2    )	\label{eq:ddphi2Entkoppelt} 
+\end{align}
+
+werden in sämtlichen Simulationen verwendet. Aus Gründen der Übersichtlichkeit wird auf eine vollständige Darstellung der Gleichungen~\ref{eq:ddphi1Entkoppelt} und~\ref{eq:ddphi2Entkoppelt} verzichtet.
 
